--- a/forum-portal/src/main/resources/templates/index.html
+++ b/forum-portal/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
         <div th:replace="include/posts-card :: posts_card('常见问题', '/faq', '/faq/', ${hotFaqList})"></div>
 
         <!-- 联系我 -->
-        <div th:replace="include/img-card :: img_card(${globalConfig.contactMeTitle}, ${globalConfig.contactMeWxQrCode}, '#')"></div>
+<!--        <div th:replace="include/img-card :: img_card(${globalConfig.contactMeTitle}, ${globalConfig.contactMeWxQrCode}, '#')"></div>-->
 
         <!-- 常用标签 -->
         <div th:replace="include/used-tags :: used_tags('常用标签', ${usedTags})"></div>
