--- a/forum-portal/src/main/resources/templates/include/related-posts.html
+++ b/forum-portal/src/main/resources/templates/include/related-posts.html
@@ -12,7 +12,7 @@
           <a th:text="${article.title}"
              th:href="${(article.category == 'ARTICLE' ? '/article/' : '/faq/') + article.id}"
              target="_blank"
-             class="posts-list-title">又到一年一度双十一，你的购物车加满了吗？来对比一下李佳琦和薇娅直播间双十一清单，看哪些产品值得买</a>
+             class="posts-list-title"></a>
         </div>
       </div>
 
