--- a/forum-portal/src/main/resources/templates/include/header.html
+++ b/forum-portal/src/main/resources/templates/include/header.html
@@ -2,14 +2,14 @@
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 
 <head th:fragment="head(title, links, scripts)">
-    <title th:replace="${title}" th:text="${globalConfig.websiteName}">开发者客栈</title>
-    <meta name="baidu-site-verification" content="code-x9mzArq1EX" />
+    <title th:replace="${title}" th:text="${globalConfig.websiteName}"></title>
+    <meta name="baidu-site-verification" content="" />
     <!-- Required meta tags -->
-    <meta name="keywords" content="开发者客栈，开发者社区，开源社区，spring boot开源社区，Java开源社区，社区文章，社区问答" />
-    <meta name="description" content="开发者客栈是基于spring boot开发的一套Java版开源社区，提供写文章，提问题等功能，也可以帮助开发者免费部署供个人学习使用，商业用途需收费。" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
-    <link rel="icon" th:href="${globalConfig.websiteFaviconIconUrl}" href="https://static.developers.pub/favicon.ico">
+<!--    <link rel="icon" th:href="${globalConfig.websiteFaviconIconUrl}" href="https://static.developers.pub/favicon.ico">-->
 
     <!-- cdn server -->
 <!--    <link href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">-->
@@ -17,10 +17,6 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/toastr.min.css" rel="stylesheet">
 
-    <!--
-        custom style，为什么不写在单独的css文件里？资源文件上传到cdn后，再对文件内容改动后再上传cdn，
-        cdn同名文件有缓存，刷新不及时，每次都需要修改文件名后再上传cdn，这样很麻烦
-    -->
     <style>
         body {
             -webkit-font-smoothing: antialiased;
